tests/loops/valid/for_variable_shadow.su
s32 main() {
    s32 i = 0;
    s32 j = 0;
    for (i = 0; i < 10; i = i + 1) {
        s32 k = i;
        for (s32 i = k; i < 10; i = i + 1)
            j = j + 1;
    }
    return j + i;
}