tests/loops/invalid/syntax_err_empty_clause.su
s32 main() {
    for (s32 i = 2; ))
        s32 a = 0;
}